--- a/package.json
+++ b/package.json
@@ -22,12 +22,13 @@
   },
   "dependencies": {
     "@types/jsonwebtoken": "^9.0.1",
+    "@types/mysql": "^2.15.21",
     "bcrypt": "^5.1.0",
     "bcrypt-ts": "^3.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
-    "pg": "^8.9.0"
+    "mysql": "^2.18.1"
   }
 }
