Guardar - Obtener Paciente

--- a/.env
+++ b/.env
@@ -4,6 +4,6 @@ PGDATABASE=db_fundacion-roca
 PGPASSWORD=12345
 PGPORT=5432
 
-JWT_SECRET=secretWord
+JWT_SECRET=sec12312reto213anonim123o123
 
 FRONTEND_URL=http://localhost:5173
